# i10n

./: build.gradle  deployment.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/androidTest/java/net/sf/xfd/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/java/net/sf/xfd/: Interruption.java
lib/src/main/jni/: CMakeLists.txt  interruption.c  moar_syscall.h  options.ld
lib/src/test/java/net/sf/xfd/: ExampleUnitTest.java
